Actions
Bug #10094
closedi_mdi_client_free() doesn't need to check for a NULL cdip
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
It can't be NULL at this point.
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 9c7f5315f6f25427493bd5843067c95189748694
commit 9c7f5315f6f25427493bd5843067c95189748694 Author: John Levon <john.levon@joyent.com> Date: 2019-03-12T11:23:29.000Z 10094 i_mdi_client_free() doesn't need to check for a NULL cdip Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions