10094 i_mdi_client_free() doesn't need to check for a NULL cdip Reviewed by: Robert Mustacchi <rm@joyent.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>